# silvia

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  Makefile.am  README.md  autogen.sh  config.h.cmake  configure.ac  silvia.pc.in
cmake/: DetectArch.cmake  FindGMP.cmake
data/: silvia.pc.cmake
debian/: changelog  control  copyright  rules
gentoo/: Manifest  metadata.xml  silvia-9999.ebuild
m4/: acx_cppunit.m4  acx_gmp.m4  acx_nfc.m4  acx_openssl.m4
src/: Makefile.am
src/lib/: CMakeLists.txt  Makefile.am
src/lib/common/: Makefile.am  silvia_apdu.cpp  silvia_asn1.cpp  silvia_asn1.h  silvia_bytestring.cpp  silvia_bytestring.h  silvia_card_channel.h  silvia_hash.cpp  silvia_hash.h  silvia_macros.h  silvia_parameters.cpp  silvia_parameters.h  silvia_rand.cpp  silvia_rand.h  silvia_timer.cpp  silvia_timer.h  silvia_types.cpp  silvia_types.h
src/lib/common/test/: CMakeLists.txt  Makefile.am  bytestringtests.cpp  bytestringtests.h  hashtests.cpp  hashtests.h  randtests.cpp  randtests.h  syspartests.cpp  syspartests.h  typetests.cpp  typetests.h
src/lib/issuer/: Makefile.am  silvia_irma_issuer.cpp  silvia_irma_issuer.h  silvia_issue_spec.cpp  silvia_issue_spec.h  silvia_issuer.cpp  silvia_issuer.h  silvia_issuer_keygen.cpp  silvia_issuer_keygen.h
src/lib/issuer/test/: CMakeLists.txt  issuetests.cpp  issuetests.h
src/lib/manager/: Makefile.am  silvia_irma_manager.cpp  silvia_irma_manager.h
src/lib/manager/test/: Makefile.am  issuertest.cpp  issuetests.cpp  issuetests.h  keygentests.cpp  keygentests.h  managertest.cpp  managertests.cpp  managertests.h
src/lib/nfc/: Makefile.am  silvia_nfc_card.cpp  silvia_nfc_card.h
src/lib/nfc/test/: Makefile.am  silvia_nfctest.cpp
src/lib/pcsc/: Makefile.am  silvia_apdu.h  silvia_card.cpp  silvia_card.h  silvia_pcsc_card.cpp  silvia_pcsc_card.h
src/lib/pcsc/test/: CMakeLists.txt  Makefile.am  silvia_hsimtest.cpp  silvia_issue_hsimtest.cpp  silvia_issue_pcsctest.cpp  silvia_pcsctest.cpp
src/lib/prover/: Makefile.am  silvia_prover.cpp  silvia_prover.h  silvia_prover_credgen.cpp  silvia_prover_credgen.h
src/lib/prover/test/: CMakeLists.txt  Makefile.am  credgentests.cpp  credgentests.h  provertest.cpp  provetests.cpp  provetests.h
src/lib/stdio/: Makefile.am  silvia_stdio_card.cpp  silvia_stdio_card.h
src/lib/test/: CMakeLists.txt  Makefile.am  issuetests.cpp  issuetests.h  proveverifytests.cpp  proveverifytests.h  silviatest.cpp
src/lib/verifier/: Makefile.am  silvia_irma_verifier.cpp  silvia_irma_verifier.h  silvia_verifier.cpp  silvia_verifier.h  silvia_verifier_spec.cpp  silvia_verifier_spec.h
src/lib/verifier/test/: CMakeLists.txt  Makefile.am  irma_verifytests.cpp  irma_verifytests.h  verifiertest.cpp  verifytests.cpp  verifytests.h
src/lib/xml/: Makefile.am  silvia_idemix_xmlreader.cpp  silvia_idemix_xmlreader.h  silvia_irma_xmlreader.cpp  silvia_irma_xmlreader.h
src/lib/xml/test/: Makefile.am  credspec.xml  description.xml  id_agelower.xml  ipk.xml  xmltest.cpp  xmltests.cpp  xmltests.h
