# $Id: Makefile.am 42 2013-06-20 12:47:04Z rijswijk $

ACLOCAL_AMFLAGS = -I m4

MAINTAINERCLEANFILES = \
        config.log config.status \
        $(srcdir)/Makefile.in \
        $(srcdir)/config.h.in $(srcdir)/config.h.in~ \
        $(srcdir)/configure \
        $(srcdir)/install-sh $(srcdir)/ltmain.sh $(srcdir)/missing \
        $(srcdir)/depcomp $(srcdir)/aclocal.m4 $(srcdir)/compile \
        $(srcdir)/config.guess $(srcdir)/config.sub

EXTRA_DIST = 		AUTHORS \
			ChangeLog \
			LICENSE \
			NEWS \
			README.md

doc_DATA =		AUTHORS \
			ChangeLog \
			LICENSE \
			NEWS \
			README.md

SUBDIRS = src 
