# $Id$

MAINTAINERCLEANFILES = 		$(srcdir)/Makefile.in

AM_CPPFLAGS = 			-I$(srcdir)/../common \
				-I$(srcdir)/..

noinst_LTLIBRARIES =		libsilvia_stdio.la

libsilvia_stdio_la_SOURCES =	silvia_stdio_card.h \
				silvia_stdio_card.cpp

libsilvia_stdio_la_LIBADD =	

pkginclude_HEADERS =		silvia_stdio_card.h
